fix image,comic gen
